# lanpilot

./: .gitignore  Cargo.toml  LanPilot.slnx  README.md
crates/lanpilot-agent/: Cargo.toml
crates/lanpilot-agent/src/: cli_main.rs  lib.rs  main.rs
crates/lanpilot-app/: Cargo.toml  build.rs
crates/lanpilot-app/src/: main.rs
crates/lanpilot-core/: Cargo.toml
crates/lanpilot-core/src/: lib.rs
crates/lanpilot-host/: Cargo.toml
crates/lanpilot-host/src/: cli_main.rs  lib.rs  main.rs
scripts/: build-portable.ps1
src/LanPilot.Agent/: Program.cs
src/LanPilot.Core/: Class1.cs
src/LanPilot.Host/: LanPilot.Host.csproj  Program.cs
tests/LanPilot.Core.Tests/: LanPilot.Core.Tests.csproj  UnitTest1.cs
