[workspace]
members = [
    "crates/lanpilot-core",
    "crates/lanpilot-host",
    "crates/lanpilot-agent",
    "crates/lanpilot-app",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/carbarher/lanpilot"

[patch.crates-io]
block = { path = "third_party/block-0.1.6" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
