[package]
name = "lanpilot-agent"
version = "0.1.0"
edition = "2024"

[lib]
name = "lanpilot_agent"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
lanpilot-core = { path = "../lanpilot-core" }
lz4_flex = "0.11"
minifb = "0.27"
arboard = "3.6"
cpal = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
