[package]
name = "lanpilot-host"
version = "0.1.0"
edition = "2024"

[lib]
name = "lanpilot_host"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
chrono = "0.4"
lanpilot-core = { path = "../lanpilot-core" }
lz4_flex = "0.11"
arboard = "3.6"
cpal = "0.15"
twox-hash = "2.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
